<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>TestMain</class>
 <widget class="QMainWindow" name="TestMain">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>300</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>VLC-Qt Test</string>
  </property>
  <property name="windowIcon">
   <iconset resource="../data/logo.qrc">
    <normaloff>:/vlc-qt/icons/48x48/vlc-qt.png</normaloff>:/vlc-qt/icons/48x48/vlc-qt.png</iconset>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QPushButton" name="buttonLib">
      <property name="text">
       <string>Core Library Test</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QPushButton" name="buttonPlayer">
      <property name="text">
       <string>Player Test</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QPushButton" name="buttonDualInstance">
      <property name="text">
       <string>Dual Instance Test</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QPushButton" name="buttonDualPlayer">
      <property name="text">
       <string>Dual Player Test</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QPushButton" name="buttonMetaManager">
      <property name="text">
       <string>Meta Manager Test</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QPushButton" name="buttonRecorder">
      <property name="text">
       <string>Recorder Test</string>
      </property>
     </widget>
    </item>
    <item>
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
        <height>40</height>
       </size>
      </property>
     </spacer>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>400</width>
     <height>23</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuFile">
    <property name="title">
     <string>File</string>
    </property>
    <addaction name="actionExit"/>
   </widget>
   <addaction name="menuFile"/>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
  <action name="actionExit">
   <property name="text">
    <string>Exit</string>
   </property>
  </action>
 </widget>
 <resources>
  <include location="../data/logo.qrc"/>
 </resources>
 <connections>
  <connection>
   <sender>actionExit</sender>
   <signal>triggered()</signal>
   <receiver>TestMain</receiver>
   <slot>close()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>-1</x>
     <y>-1</y>
    </hint>
    <hint type="destinationlabel">
     <x>149</x>
     <y>99</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
